ENABLE_LANGUAGE(CXX)
# ENABLE_LANGUAGE(Python)
SET(ROOT_PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME}_constraint_solver)

FILE(GLOB ${PROJECT_NAME}_SOURCES "*.cc")

PROTOBUF_GENERATE_CPP(SOLVER_PROTO_SRCS SOLVER_PARAM_HDRS solver_parameters.proto)
PROTOBUF_GENERATE_CPP(MODEL__PROTO_SRCS MODEL__PROTO_HDRS model.proto)
PROTOBUF_GENERATE_CPP(SEARCH_PROTO_SRCS SEARCH_PROTO_HDRS search_limit.proto)
PROTOBUF_GENERATE_CPP(ASSIGN_PROTO_SRCS ASSIGN_PROTO_HDRS assignment.proto)
PROTOBUF_GENERATE_CPP(PROFIL_PROTO_SRCS PROFIL_PROTO_HDRS demon_profiler.proto)
PROTOBUF_GENERATE_CPP(ROUTEN_PROTO_SRCS ROUTEN_PROTO_HDRS routing_enums.proto)
PROTOBUF_GENERATE_CPP(ROUTPA_PROTO_SRCS ROUTPA_PROTO_HDRS routing_parameters.proto)

ADD_CUSTOM_TARGET(ForceProtobufGen_${PROJECT_NAME}
        ALL
        DEPENDS
        ${SOLVER_PROTO_SRCS}
        ${MODEL__PROTO_SRCS}
        ${SEARCH_PROTO_SRCS}
        ${ASSIGN_PROTO_SRCS}
        ${PROFIL_PROTO_SRCS}
        ${ROUTEN_PROTO_SRCS}
        ${ROUTPA_PROTO_SRCS})


IF(BUILD_PYTHON)
    PROTOBUF_GENERATE_PYTHON(PY_ASSIGN_PROTO_SRCS assignment.proto)
    PROTOBUF_GENERATE_PYTHON(PY_SEARCH_PROTO_SRCS search_limit.proto)
    PROTOBUF_GENERATE_PYTHON(PY_MODEL__PROTO_SRCS model.proto)
    PROTOBUF_GENERATE_PYTHON(PY_ROUTEN_PROTO_SRCS routing_enums.proto)
    PROTOBUF_GENERATE_PYTHON(PY_SOLVER_PROTO_SRCS solver_parameters.proto)
    PROTOBUF_GENERATE_PYTHON(PY_ROUTPA_PROTO_SRCS routing_parameters.proto)
ENDIF(BUILD_PYTHON)

ADD_LIBRARY(${PROJECT_NAME}
        OBJECT
        ${${PROJECT_NAME}_SOURCES}
        ${SOLVER_PROTO_SRCS}
        ${MODEL__PROTO_SRCS}
        ${SEARCH_PROTO_SRCS}
        ${ASSIGN_PROTO_SRCS}
        ${PROFIL_PROTO_SRCS}
        ${ROUTEN_PROTO_SRCS}
        ${ROUTPA_PROTO_SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
ADD_DEPENDENCIES(${PROJECT_NAME}
        ForceProtobufGen_${ROOT_PROJECT}_glop
        ForceProtobufGen_${ROOT_PROJECT}_linear_solver
        ForceProtobufGen_${ROOT_PROJECT}_sat)