ENABLE_LANGUAGE(CXX)
SET(ROOT_PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME}_constraint_solver)

FILE(GLOB ${PROJECT_NAME}_SOURCES "*.cc")

IF(BUILD_PYTHON)
    PROTOBUF_GENERATE_PYTHON(PY_ASSIGN_PROTO_SRCS assignment.proto)
    PROTOBUF_GENERATE_PYTHON(PY_SEARCH_PROTO_SRCS search_limit.proto)
    PROTOBUF_GENERATE_PYTHON(PY_MODEL__PROTO_SRCS model.proto)
    PROTOBUF_GENERATE_PYTHON(PY_ROUTEN_PROTO_SRCS routing_enums.proto)
    PROTOBUF_GENERATE_PYTHON(PY_SOLVER_PROTO_SRCS solver_parameters.proto)
    PROTOBUF_GENERATE_PYTHON(PY_ROUTPA_PROTO_SRCS routing_parameters.proto)
ENDIF(BUILD_PYTHON)

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_SOURCES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

ADD_DEPENDENCIES(${PROJECT_NAME} ${ROOT_PROJECT}Proto)